syntax = "proto3";

message SharedFileMetadata {
  string id = 1;
  string name = 2;
  int64 size = 3;
}

message FileUpdate {
  oneof update {
    FileAdded file_added = 1;
    FileRemoved file_removed = 2;
  }

  message FileAdded {
    SharedFileMetadata file = 1;
  }

  message FileRemoved {
    string file_id = 1;
  }
}

message GetInformationRequest {
  string message_id = 1;
}

message GetInformationResponse {
  string message_id = 1;
  string name = 2;
  repeated SharedFileMetadata files = 3;
}

message FileDownloadRequest {
  string message_id = 1;
  string file_id = 2;
}

message FileDownloadResponse {
  string message_id = 1;
  int32 channel_id = 2;
}
